--- a/TodoApp/Src/TodoApp.Dependency/TodoApp.Dependency.csproj
+++ b/TodoApp/Src/TodoApp.Dependency/TodoApp.Dependency.csproj
@@ -73,8 +73,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Containers\DependencyContainer.cs" />
+    <Compile Include="Exceptions\DependencyResolutionFailedException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resolvers\UnityResolver.cs" />
+    <Compile Include="Resolvers\DependencyResolver.cs" />
     <Compile Include="UnityConfig.cs" />
   </ItemGroup>
   <ItemGroup>
