--- a/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -32,15 +32,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration.ConfigurationManager, Version=4.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\System.Configuration.ConfigurationManager.4.4.1\lib\net461\System.Configuration.ConfigurationManager.dll</HintPath>
-    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bootstraps\IBootstrap.cs" />
     <Compile Include="Containers\IDependencyContainer.cs" />
+    <Compile Include="Exceptions\DependencyResolutionFailedException.cs" />
     <Compile Include="Repositories\IItemRepository.cs" />
     <Compile Include="Models\Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
