--- a/TodoApp/Tests/TodoApp.Dependency.Tests/TodoApp.Dependency.Tests.csproj
+++ b/TodoApp/Tests/TodoApp.Dependency.Tests/TodoApp.Dependency.Tests.csproj
@@ -50,9 +50,10 @@
   <ItemGroup>
     <Compile Include="Configs\UnityConfigTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Containers\TestContainer.cs" />
+    <Compile Include="Mocks\Containers\TestContainer.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
