--- a/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
+++ b/TodoApp/Src/TodoApp.Contracts/TodoApp.Contracts.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Compile Include="Bootstraps\IBootstrap.cs" />
     <Compile Include="Containers\IDependencyContainer.cs" />
+    <Compile Include="Enums\LifetimeManagerType.cs" />
     <Compile Include="Exceptions\DependencyResolutionFailedException.cs" />
     <Compile Include="Repositories\IItemRepository.cs" />
     <Compile Include="Models\Item.cs" />
